--- a/data_analisys/Aula1.ipynb
+++ b/data_analisys/Aula1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4bd02afb",
    "metadata": {},
    "outputs": [],
@@ -12,85 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a6fb4711",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pyautogui\n",
-      "  Using cached PyAutoGUI-0.9.53.tar.gz (59 kB)\n",
-      "Collecting pymsgbox\n",
-      "  Using cached PyMsgBox-1.0.9.tar.gz (18 kB)\n",
-      "  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h    Preparing wheel metadata ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting PyTweening>=1.0.1\n",
-      "  Using cached pytweening-1.0.4.tar.gz (14 kB)\n",
-      "Collecting pyscreeze>=0.1.21\n",
-      "  Using cached PyScreeze-0.1.28.tar.gz (25 kB)\n",
-      "  Installing build dependencies ... \u001b[?25ldone\n",
-      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
-      "\u001b[?25h    Preparing wheel metadata ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting pygetwindow>=0.0.5\n",
-      "  Using cached PyGetWindow-0.0.9.tar.gz (9.7 kB)\n",
-      "Collecting mouseinfo\n",
-      "  Using cached MouseInfo-0.1.3.tar.gz (10 kB)\n",
-      "Collecting python3-Xlib\n",
-      "  Using cached python3-xlib-0.15.tar.gz (132 kB)\n",
-      "Collecting pyrect\n",
-      "  Using cached PyRect-0.2.0.tar.gz (17 kB)\n",
-      "Collecting pyperclip\n",
-      "  Using cached pyperclip-1.8.2.tar.gz (20 kB)\n",
-      "Building wheels for collected packages: pyautogui, pygetwindow, pyscreeze, PyTweening, mouseinfo, pymsgbox, pyperclip, pyrect, python3-Xlib\n",
-      "  Building wheel for pyautogui (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for pyautogui: filename=PyAutoGUI-0.9.53-py3-none-any.whl size=36614 sha256=c72b11befdf4adecb3fef4246a09d4f9ca503e1ff1574fdae8585912649e30eb\n",
-      "  Stored in directory: /home/ph/.cache/pip/wheels/d8/97/e4/d2edca92a87d3b5fbfb527264750a17b4ba297b9a7cab6e67f\n",
-      "  Building wheel for pygetwindow (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for pygetwindow: filename=PyGetWindow-0.0.9-py3-none-any.whl size=11081 sha256=eb53182df68c5af3d32cebbd8ab096786645744660f0faa7ff55a0c08f4b0ca1\n",
-      "  Stored in directory: /home/ph/.cache/pip/wheels/44/ab/20/423c3a444793767e4e41f8377bc902f77bee212e68dcce85a5\n",
-      "  Building wheel for pyscreeze (PEP 517) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for pyscreeze: filename=PyScreeze-0.1.28-py3-none-any.whl size=13009 sha256=5d2896446f4833f852d3201273f50b06dd2f754a122fbd52b8c3161eeb213282\n",
-      "  Stored in directory: /home/ph/.cache/pip/wheels/a2/5b/86/99f1d8fac5d92de0ccb3f0d4ad15e3f4278baf75a9b0f20b93\n",
-      "  Building wheel for PyTweening (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for PyTweening: filename=pytweening-1.0.4-py3-none-any.whl size=5854 sha256=378966cadb78f891f8c1193f2d09da3d628ae9043678921248ced686f10333a2\n",
-      "  Stored in directory: /home/ph/.cache/pip/wheels/a4/5d/d2/ba4c8f82163233ffaadcf383c1e34d7d92635d357d13e7b78d\n",
-      "  Building wheel for mouseinfo (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for mouseinfo: filename=MouseInfo-0.1.3-py3-none-any.whl size=10906 sha256=b681a1a5996f2cd2e808d608af7256b08bde3546247957b0ac1b9b702691a1c7\n",
-      "  Stored in directory: /home/ph/.cache/pip/wheels/61/73/b9/6fb1131ab36e650206e3aa0ad7a68907b41b32ac2d4f75f543\n",
-      "  Building wheel for pymsgbox (PEP 517) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for pymsgbox: filename=PyMsgBox-1.0.9-py3-none-any.whl size=7406 sha256=3f7633370bc9e3184ecfe5e2c07ed4a8b6fb6229c94888216803b676557b3561\n",
-      "  Stored in directory: /home/ph/.cache/pip/wheels/7f/13/8c/584c519464297d9637f9cd29fd1dcdf55e2a2cab225c76a2db\n",
-      "  Building wheel for pyperclip (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for pyperclip: filename=pyperclip-1.8.2-py3-none-any.whl size=11137 sha256=cba8d5249a6aa4ed4ac880a137ff1a3eb63e557f7594231b293c697b2a79a976\n",
-      "  Stored in directory: /home/ph/.cache/pip/wheels/0c/09/9e/49e21a6840ef7955b06d47394afef0058f0378c0914e48b8b8\n",
-      "  Building wheel for pyrect (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for pyrect: filename=PyRect-0.2.0-py2.py3-none-any.whl size=11196 sha256=2914eccb8174a7bc049c670f03c62d8f817f71daf6744a9e545296e1958ae431\n",
-      "  Stored in directory: /home/ph/.cache/pip/wheels/25/80/fa/27bb4a1c2e21f64ec71390489d52e57b7cc8afbe79bd595c5e\n",
-      "  Building wheel for python3-Xlib (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for python3-Xlib: filename=python3_xlib-0.15-py3-none-any.whl size=109517 sha256=fea6995b4b5d4ac09f98790d543cac6fba4de6955a58fd76c2618dc6a0dfb95b\n",
-      "  Stored in directory: /home/ph/.cache/pip/wheels/e8/f5/f4/4c7032e17a250a7327c4fa4d4807452558e04487c783bcde39\n",
-      "Successfully built pyautogui pygetwindow pyscreeze PyTweening mouseinfo pymsgbox pyperclip pyrect python3-Xlib\n",
-      "Installing collected packages: python3-Xlib, pyrect, pyperclip, PyTweening, pyscreeze, pymsgbox, pygetwindow, mouseinfo, pyautogui\n",
-      "Successfully installed PyTweening-1.0.4 mouseinfo-0.1.3 pyautogui-0.9.53 pygetwindow-0.0.9 pymsgbox-1.0.9 pyperclip-1.8.2 pyrect-0.2.0 pyscreeze-0.1.28 python3-Xlib-0.15\n",
-      "Requirement already satisfied: pandas in /home/ph/anaconda3/lib/python3.9/site-packages (1.4.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /home/ph/anaconda3/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/ph/anaconda3/lib/python3.9/site-packages (from pandas) (2021.3)\n",
-      "Requirement already satisfied: numpy>=1.18.5 in /home/ph/anaconda3/lib/python3.9/site-packages (from pandas) (1.21.5)\n",
-      "Requirement already satisfied: six>=1.5 in /home/ph/anaconda3/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install pyautogui\n",
-    "!pip install pandas"
+    "# !pip install pyautogui\n",
+    "# !pip install pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "19de3ae9",
    "metadata": {},
    "outputs": [],
@@ -104,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "bdb5c21d",
    "metadata": {},
    "outputs": [],
@@ -132,190 +65,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "bb2b0e20",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Código Venda</th>\n",
-       "      <th>Data</th>\n",
-       "      <th>ID Loja</th>\n",
-       "      <th>Produto</th>\n",
-       "      <th>Quantidade</th>\n",
-       "      <th>Valor Unitário</th>\n",
-       "      <th>Valor Final</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>65014</td>\n",
-       "      <td>2019-12-01</td>\n",
-       "      <td>Shopping Morumbi</td>\n",
-       "      <td>Sunga Listrado</td>\n",
-       "      <td>5</td>\n",
-       "      <td>114</td>\n",
-       "      <td>570</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>65014</td>\n",
-       "      <td>2019-12-01</td>\n",
-       "      <td>Shopping Morumbi</td>\n",
-       "      <td>Casaco Listrado</td>\n",
-       "      <td>1</td>\n",
-       "      <td>269</td>\n",
-       "      <td>269</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>65016</td>\n",
-       "      <td>2019-12-01</td>\n",
-       "      <td>Iguatemi Campinas</td>\n",
-       "      <td>Sapato Listrado</td>\n",
-       "      <td>2</td>\n",
-       "      <td>363</td>\n",
-       "      <td>726</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>65016</td>\n",
-       "      <td>2019-12-01</td>\n",
-       "      <td>Iguatemi Campinas</td>\n",
-       "      <td>Casaco</td>\n",
-       "      <td>1</td>\n",
-       "      <td>250</td>\n",
-       "      <td>250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>65017</td>\n",
-       "      <td>2019-12-01</td>\n",
-       "      <td>Shopping SP Market</td>\n",
-       "      <td>Gorro Liso</td>\n",
-       "      <td>3</td>\n",
-       "      <td>92</td>\n",
-       "      <td>276</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7084</th>\n",
-       "      <td>69996</td>\n",
-       "      <td>2019-12-26</td>\n",
-       "      <td>Center Shopping Uberlândia</td>\n",
-       "      <td>Short Listrado</td>\n",
-       "      <td>2</td>\n",
-       "      <td>102</td>\n",
-       "      <td>204</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7085</th>\n",
-       "      <td>69996</td>\n",
-       "      <td>2019-12-26</td>\n",
-       "      <td>Center Shopping Uberlândia</td>\n",
-       "      <td>Mochila</td>\n",
-       "      <td>4</td>\n",
-       "      <td>270</td>\n",
-       "      <td>1080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7086</th>\n",
-       "      <td>69996</td>\n",
-       "      <td>2019-12-26</td>\n",
-       "      <td>Center Shopping Uberlândia</td>\n",
-       "      <td>Pulseira Estampa</td>\n",
-       "      <td>1</td>\n",
-       "      <td>87</td>\n",
-       "      <td>87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7087</th>\n",
-       "      <td>69997</td>\n",
-       "      <td>2019-12-26</td>\n",
-       "      <td>Ribeirão Shopping</td>\n",
-       "      <td>Camisa Listrado</td>\n",
-       "      <td>1</td>\n",
-       "      <td>108</td>\n",
-       "      <td>108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7088</th>\n",
-       "      <td>69997</td>\n",
-       "      <td>2019-12-26</td>\n",
-       "      <td>Ribeirão Shopping</td>\n",
-       "      <td>Short Linho</td>\n",
-       "      <td>2</td>\n",
-       "      <td>133</td>\n",
-       "      <td>266</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7089 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Código Venda       Data                     ID Loja           Produto  \\\n",
-       "0            65014 2019-12-01            Shopping Morumbi    Sunga Listrado   \n",
-       "1            65014 2019-12-01            Shopping Morumbi   Casaco Listrado   \n",
-       "2            65016 2019-12-01           Iguatemi Campinas   Sapato Listrado   \n",
-       "3            65016 2019-12-01           Iguatemi Campinas            Casaco   \n",
-       "4            65017 2019-12-01          Shopping SP Market        Gorro Liso   \n",
-       "...            ...        ...                         ...               ...   \n",
-       "7084         69996 2019-12-26  Center Shopping Uberlândia    Short Listrado   \n",
-       "7085         69996 2019-12-26  Center Shopping Uberlândia           Mochila   \n",
-       "7086         69996 2019-12-26  Center Shopping Uberlândia  Pulseira Estampa   \n",
-       "7087         69997 2019-12-26           Ribeirão Shopping   Camisa Listrado   \n",
-       "7088         69997 2019-12-26           Ribeirão Shopping       Short Linho   \n",
-       "\n",
-       "      Quantidade  Valor Unitário  Valor Final  \n",
-       "0              5             114          570  \n",
-       "1              1             269          269  \n",
-       "2              2             363          726  \n",
-       "3              1             250          250  \n",
-       "4              3              92          276  \n",
-       "...          ...             ...          ...  \n",
-       "7084           2             102          204  \n",
-       "7085           4             270         1080  \n",
-       "7086           1              87           87  \n",
-       "7087           1             108          108  \n",
-       "7088           2             133          266  \n",
-       "\n",
-       "[7089 rows x 7 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Passo 4: Calcular os indicadores\n",
     "import pandas as pd\n",
