--- a/data_analisys/Aula3.ipynb
+++ b/data_analisys/Aula3.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "d8e821a4",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
     "# passo 4: atualizar a base de dados\n",
     "\n",
     "# importar a base de dados\n",
-    "dataframe = pd.read_excel('Produtos.xlsx')\n",
+    "dataframe = pd.read_excel('data/Produtos.xlsx')\n",
     "\n",
     "display(dataframe)"
    ]
